<resources>
    <string name="app_name">银行传呼机</string>


    <string name="server_ip"> 地址 : </string>
    <string name="server_port"> 端口号 : </string>
    <string name="server_job_number"> 工号 : </string>


    <string name="input_server_ip">请输入服务器地址</string>
    <string name="input_server_port">请输入服务器端口号</string>
    <string name="input_server_job_number">请输入工号</string>


    <string name="login_state">状态 : </string>
    <string name="login_state_connect_success">连接成功</string>
    <string name="login_state_connect_failt">连接失败</string>
    <string name="login_state_connect_not">未连接</string>
    <string name="login_state_connect_ing">正在连接</string>
    <string name="login_button">连接服务器</string>
    <string name="show_server_sure">接受服务</string>
    <string name="show_server_refuse">拒绝服务</string>
    <string name="show_server_over">服务完成</string>
    <string name="title_close_app">停止连接</string>

    <string name="notify_server_monite_title">传呼机监听服务</string>
    <string name="notify_server_communication_title">传呼机通讯服务</string>
    <string name="notify_server_info">请勿点击或关闭</string>
</resources>
